--- a/server/app/static/style/question.scss
+++ b/server/app/static/style/question.scss
@@ -11,6 +11,10 @@
         cursor: pointer;
         color: #ef4d3d;
       }
+      .undisplay:hover {
+        cursor: pointer;
+        color: #0695d6;
+      }
     }
 
     blockquote {
