--- a/server/app/templates/question.html
+++ b/server/app/templates/question.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block main %}
-    <section class="container-fluid" id="search_results">
+    <section class="container-fluid search-results">
         <div class="row panels-row">
             {% with result = question, hide_more_info_link = True %}
                 {% include 'search/result.html' %}
