--- a/server/app/templates/forms/delete_all_modal.html
+++ b/server/app/templates/forms/delete_all_modal.html
@@ -11,7 +11,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Cancelar</button>
-                <button type="button" class="btn btn-danger btn-sm">Borrar resultados</button>
+                <button type="button" class="btn btn-danger btn-sm" id="confirm-delete-all">Borrar resultados</button>
             </div>
         </div>
     </div>
