--- a/server/app/templates/search/filters.html
+++ b/server/app/templates/search/filters.html
@@ -13,11 +13,20 @@
                 </a>
             </div>
         {% endif %}
-        {% for filter_name in query.filters %}
+        {% for filter_name in query.filters if filter_name[-11:] != 'comparacion' %}
             <div class="col-xs-12 filter text-query">
                 <a class="panel panel-default filter-link" href="#" data-filter-link-type="remove" data-filter-name="{{ filter_name }}">
                     <div class="panel-body">
-                        <h3>Filtrando por {{ filter_name }}: {{ query.filters[filter_name] }}</h3>
+                        {% set filter_comparision = query.filters[filter_name + '-comparacion'] if filter_name + '-comparacion' in query.filters else 'igualdad' %}
+                        <h3>
+                            Viendo preguntas que 
+                            {{ 'tengan' if query.filters[filter_name]|length > 0 else 'no tengan' }} 
+                            {{ filter_name }}
+                            {% if query.filters[filter_name]|length > 0 %}
+                                {{ 'igual a' if filter_comparision == 'igualdad' else 'distinto a' }}
+                                "{{ query.filters[filter_name] }}"
+                            {% endif %}
+                        </h3>
                     </div>
                     <i class="fa fa-times fa-2x close" aria-hidden="true"></i>
                 </a>
@@ -69,7 +78,7 @@
                                 </label>
                             {% endfor %}
                         </div>
-                        <div class="actions">
+                        <div class="col-xs-12 actions">
                             <button class="btn btn-sm btn-default cancel-filter">Cancelar</button>
                             <a href="" id="apply-filter" class="filter-link" data-filter-link-type="add">
                                 <button class="btn btn-sm btn-success">Aplicar filtro</button>
