--- a/server/app/static/style/search.scss
+++ b/server/app/static/style/search.scss
@@ -42,6 +42,7 @@
       width: 300px;
     }
     .actions {
+      margin-top: 10px;
       text-align: right;
       button {
         margin-bottom: 0;
