Primer version de listado de preguntas similares con longitud variable

--- a/server/app/static/style/app.css
+++ b/server/app/static/style/app.css
@@ -2420,6 +2420,9 @@ mark {
   text-align: center;
   border: none; }
 
+.see-more-container {
+  text-align: center; }
+
 .search-results .result .question-actions {
   text-align: right; }
   .search-results .result .question-actions .edit:hover {
