--- a/server/app/static/style/search.scss
+++ b/server/app/static/style/search.scss
@@ -53,13 +53,12 @@
 
 .search-results {
   .results-title {
-    position: relative;
-    padding-right: 120px;
+    .results-actions {
+      float: right;
+      margin-bottom: 20px;
+    }
     .delete-all {
-      position: absolute;
-      top: 50%;
-      right: 10px;
-      margin-top: -11px;
+      margin-right: 20px;
       &:hover {
         cursor: pointer;
         color: #ef4d3d;
