--- a/server/app/static/style/forms.scss
+++ b/server/app/static/style/forms.scss
@@ -18,3 +18,33 @@ form#upload_form {
     text-align: right;
   }
 }
+
+form#single_question_form {
+  .field {
+    vertical-align: middle;
+    border-radius: 4px;
+    border: solid 1px #aaa;
+    display: block;
+    width: 100%;
+    resize: none;
+  }
+
+  .select2 {
+    width: 100% !important;
+  }
+
+  .field-label {
+    display: block;
+    width: 100%;
+    margin-top: 15px;
+  }
+
+  .actions {
+    margin-top: 30px;
+    text-align: right;
+  }
+}
+
+#question-editor #single_question_form {
+  border: none;
+}
