--- a/server/app/templates/forms/question_edit_modal.html
+++ b/server/app/templates/forms/question_edit_modal.html
@@ -1,4 +1,4 @@
-<div id="question-editor" class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog"
+<div id="question-editor" class="modal fade bs-example-modal-lg" role="dialog"
      aria-labelledby="myLargeModalLabel">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
@@ -10,10 +10,6 @@
             </div>
             <div class="modal-body">
 
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Cancelar</button>
-                <button type="button" class="btn btn-success btn-sm">Guardar Cambios</button>
             </div>
         </div>
     </div>
