--- a/server/app/static/style/forms.scss
+++ b/server/app/static/style/forms.scss
@@ -33,6 +33,10 @@ form#single_question_form {
     width: 100% !important;
   }
 
+  .field {
+    padding: 0 8px;
+  }
+
   .field-label {
     display: block;
     width: 100%;
