--- a/server/app/templates/question.html
+++ b/server/app/templates/question.html
@@ -8,7 +8,7 @@
             {% endwith %}
         </div>
     </section>
-    {% with results = similar_results, results_name = 'preguntas similares', hide_delete_massive = True, hide_order = True %}
+    {% with results = similar_results, hide_delete_massive = True, hide_order = True %}
         {% include 'search/results_list.html' %}
     {% endwith %}
 {% endblock %}
